# rift

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  bookmarks.rs  clipboard.rs  config.rs  event.rs  follow.rs  lib.rs  main.rs
src/highlight/: format.rs  mod.rs
src/reader/: index.rs  mmap.rs  mod.rs
src/search/: engine.rs  fuzzy.rs  mod.rs
src/ui/: cmdline.rs  minimap.rs  mod.rs  popup.rs  stats.rs  statusbar.rs  viewport.rs
tests/: integration.rs
tests/fixtures/: crlf.txt  long_line.txt  utf8.txt
